--- a/README
+++ b/README
@@ -1,5 +1,9 @@
 GVF-Clin
 
+
+**** THIS TOOL IS STILL IN ACTIVE DEVELOPMENT ****
+
+
 The README is used to introduce the module and provide instructions on
 how to install the module, any machine dependencies it may have (for
 example C compilers and installed libraries) and any other information
