Update README file.

--- a/README
+++ b/README
@@ -1,8 +1,8 @@
 GVF-Clin
 
-
-**** THIS TOOL IS STILL IN ACTIVE DEVELOPMENT ****
-
+*************************************************
+*** THIS TOOL IS STILL IN ACTIVE DEVELOPMENT ****
+*************************************************
 
 The README is used to introduce the module and provide instructions on
 how to install the module, any machine dependencies it may have (for
