keeping all changes

--- a/README
+++ b/README
@@ -2,6 +2,7 @@ GVF-Clin
 
 *************************************************
 *** THIS TOOL IS STILL IN ACTIVE DEVELOPMENT ****
+*** This document will be update at release  ***
 *************************************************
 
 The README is used to introduce the module and provide instructions on
