--- a/README
+++ b/README
@@ -1,8 +1,8 @@
 Clinomic
 
 *************************************************
-*** THIS TOOL IS STILL IN ACTIVE DEVELOPMENT ****
-*** This document will be update at release  ***
+*** DEVELOPMENT ON THIS TOOL HAS BEEN PAUSED ***
+*** This document will be update if released ***
 *************************************************
 
 The README is used to introduce the module and provide instructions on
